# Freakin

./: .gitignore  README  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/aq/metallists/freundschaft/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: aq_metallists_freundschaft_vocoder_GSMNativeVocoder.h  library.cpp  library.h  neurocortex.cpp
app/src/main/cpp/q_lib/include/infra/: assert.hpp  support.hpp
app/src/main/cpp/src/: gsm_decode.c  gsm_option.c  toast.c
app/src/main/res/drawable/: freakin.xml  ic_freakin_netzwerk.xml  ic_freakin_tray.xml  ic_freakin_tray_rx.xml  ic_freakin_tray_tx.xml  ic_user_bird.xml  ic_user_bird_green.xml  ic_user_pc.xml  ic_user_pc_green.xml  ic_user_radio.xml  ic_user_radio_green.xml  s_baton_confirmx.xml  selectable_button.xml
app/src/main/res/layout/: app_bar_main.xml  fragment_about.xml  fragment_gallery.xml  fragment_home.xml  fragment_settings.xml  lv_user_entry.xml  nav_header_main.xml  string_settings_dialog.xml
app/src/main/res/menu/: activity_main_drawer.xml  main.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: preferences.xml
app/src/vHighterra/res/drawable/: freakin.xml
app/src/vHighterra/res/layout/: app_bar_main.xml  fragment_home.xml  string_settings_dialog.xml
(+57 files in other folders)
